# P1_NLP_Transformer

./: 01_notebook.ipynb  README.md  main.py  pyproject.toml
Lab/: M1_L1_lecture_nb_01_preprocessing.ipynb  M1_L1_lecture_nb_02_word frequencies (2).ipynb
Level-up/: PracticeSet_1.ipynb
