[project]
name = "p1-nlp-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.13",
    "wordninja>=2.0.0",
]
